TN-11 Updated project structure.  We should probably change this in the future as the project gets bigger, but its good enough for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(rhythm)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(rhythm main.cpp)
+set(SOURCE_FILES
+        "${CMAKE_SOURCE_DIR}/src/main.cpp")
+
+add_executable(rhythm ${SOURCE_FILES})
+include_directories(rhythm include)
