TN-11 Added SportifyOAuth Handler and Login Page w/Button.  In order to run code, you need CLion v2021.2.3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,13 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 
 find_package(Qt5Widgets REQUIRED)
+find_package(Qt5Network REQUIRED)
+find_package(Qt5NetworkAuth REQUIRED)
 
 set(SOURCE_FILES
-        "${CMAKE_SOURCE_DIR}/src/main.cpp")
+        "${CMAKE_SOURCE_DIR}/src/main.cpp" src/SpotifyOAuth.cpp src/SpotifyOAuth.h src/LoginPage.cpp src/LoginPage.h)
 
 add_executable(rhythm ${SOURCE_FILES})
 include_directories(rhythm include)
 
-target_link_libraries(rhythm Qt5::Widgets)
+target_link_libraries(rhythm Qt5::Widgets Qt5::Network  Qt5::NetworkAuth)
